Fixed bullets not showing up on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@
 
 body {
    font-family: "Mulish", sans-serif;
-   background: teal;
+   background: #6495ed;
    color: var(--primary-color);
 }
 
@@ -545,7 +545,7 @@ small.text-bold {
    margin-left: 20px;
    font-size: 15px;
    padding: 5px;
-   list-style: none;
+   /* list-style: none; */
    margin-left: 5px;
    white-space: nowrap;
    overflow: hidden;
@@ -565,12 +565,15 @@ small.text-bold {
    padding-left: 5px; */
 }
 
-.notes-container .todo-container .todo-list li.bullet::before {
+.notes-container .todo-container .todo-list li::marker {
+   overflow: visible;
+}
+.notes-container .todo-container .todo-list li::before {
    content: url(/static/img/bullet2.png);
    color: red;
    position: relative;
    top: 3px;
-   /* margin-bottom: 10px; */
+   margin-bottom: 10px;
    margin-right: 7px;
 }
 
